# crucible-cc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: aggregator.md  lead-project-manager.md  lead-senior-architect.md  peer-c-cpp-reviewer.md  peer-go-reviewer.md  peer-java-kotlin-reviewer.md  peer-python-reviewer.md  peer-quality-engineer.md  peer-readability-engineer.md  peer-rust-reviewer.md  peer-sql-reviewer.md  peer-swift-reviewer.md  peer-typescript-reviewer.md  profiler.md  team-accessibility-reviewer.md  team-backend-reviewer.md  team-data-ml-reviewer.md  team-database-reviewer.md  team-devops-infra-reviewer.md  team-frontend-reviewer.md  team-network-reviewer.md  team-observability-reviewer.md  team-performance-reviewer.md  team-privacy-compliance-reviewer.md  team-security-reviewer.md
examples/: go-api-service.md  ml-training-loop.md  nextjs-auth-refactor.md
schemas/: casting-roster.schema.json  final-report.schema.json  persona-finding.schema.json
scripts/: lint_personas.py  render_report.py
scripts/_vendor/: VENDORED.md
skills/aims/: SKILL.md
skills/crucible/: SKILL.md
skills/crucible-aims-edit/: SKILL.md
skills/crucible-history/: SKILL.md
skills/history/: SKILL.md
skills/run/: SKILL.md
templates/: aims.md.tpl  cost-preview.txt  persona-protocol.md  report.md.tpl
tests/: README.md  conftest.py  test_e2e.py  test_hook_compat.py  test_persona_lint.py  test_persona_output.py  test_render_report.py  test_schemas.py
(+51 files in other folders)
